--- a/README.rdoc
+++ b/README.rdoc
@@ -5,3 +5,15 @@
 
 基本git flowの思想の元ブランチは切っていて、
 circleCIでテストを動かして通らない場合はプルリクを受け付けない方針をとっています。
+
+### 受信コマンドコンパイル
+
+```
+sudo gcc recieve.c -o recieve -lwiringPi
+```
+
+### 送信コマンドコンパイル
+
+```
+sudo gcc send.c -lm -o send -lwiringPi
+```
